# kalshi_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: bootstrap-vps.yml  compose-shadow-smoke.yml  dashboard-layout-browser.yml  demo-smoke.yml  live-smoke.yml  redeploy.yml  rollback-agent-pack.yml  self-improve.yml  strategy-e2e-browser.yml  sync-gemini-runtime.yml
alembic/: env.py
alembic/versions/: 20260410_0001_initial_schema.py  20260410_0002_research_dossiers.py  20260410_0003_agent_packs.py  20260411_0004_training_corpus.py  20260412_0005_room_strategy_audits.py  20260412_0006_historical_replay.py  20260412_0007_checkpoint_archives.py  20260412_0008_historical_intelligence.py  20260412_0009_historical_pipeline.py  20260417_0010_position_kalshi_env.py  20260418_0011_market_price_history.py  20260420_0012_fill_settlement_result.py  20260420_0013_strategies.py  20260421_0014_strategy_outcome_evidence.py  20260421_0015_web_auth.py  20260421_0016_env_scoped_runtime_state.py  20260422_0017_station_sigma_params.py  20260423_0018_strategy_c_tables.py  20260423_0019_monotonicity_arb_proposals.py  20260423_0020_fill_strategy_attribution.py  (+8 more)
docs/: agent_protocol.md  architecture.md  database.md  deterministic_autonomy_plan.md  faq.md  first_shadow_rollout.md  kalshi-weather-bot-engineering-plan.md  operations.md  runbooks.md  security.md  self_improve.md  training.md
infra/: docker-compose.yml
scripts/: backfill_cli_reconciliation.py  calibrate_sigma.py  refit_station_sigma.py
tests/: conftest.py
(+268 files in other folders)
