[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-bot"
version = "0.1.0"
description = "Multi-agent Kalshi weather trading platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "cryptography>=44.0.0",
  "duckduckgo-search>=8.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.0",
  "pgvector>=0.3.6",
  "prometheus-client>=0.21.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.36",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0",
  "websockets>=15.0",
]

[project.scripts]
kalshi-bot = "kalshi_bot.main:main"
kalshi-bot-cli = "kalshi_bot.cli:main"

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
